[package]
name = "flock"
version = "0.11.4-alpha.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2018"
publish = false

[dependencies]
flock_derive = { path = "flock_derive" }
futures03 = { package = "futures", version = "0.3" }
indexmap = "1.6"
mssql_client = { git = "https://github.com/danylaporte/mssql_client.git" }
once_cell = "1.5"
parking_lot = "0.11"
rayon = "1.5"
serde = "1.0"
thread_local = "1.0"
tracing = "0.1"
tracing-futures = "0.2"
#tokio = { version = "0.3", features = ["macros", "sync"] }
tokio = { version = "0.2", features = ["macros", "sync"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
version_tag = { git = "https://github.com/danylaporte/version_tag.git" }

[dev-dependencies]
#tokio = { version = "0.3", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio = { version = "0.2", features = ["macros", "rt-core", "rt-util", "sync", "time"] }

[workspace]
members = [
    ".",
    "flock_derive"
]
