[package]
name = "flock"
version = "0.14.1-alpha.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2018"
publish = false

[dependencies]
flock_derive = { path = "flock_derive" }
fxhash = "0.2"
indexmap = "1"
once_cell = "1"
parking_lot = "0.12"
rayon = "1"
serde = "1"
uuid = { version = "1", features = ["serde", "v4"] }
version_tag = { git = "https://github.com/danylaporte/version_tag.git", features = ["shared-tag"] }

[dev-dependencies]

[workspace]
members = [
    ".",
    "flock_derive"
]
