[package]
name = "flock"
version = "0.5.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "0.4"
failure = "0.1"
futures = "0.1"
futures-locks = "0.5"
indexmap = "1.3"
lazy_static = "1.4"
log = "0.4"
mssql_client = { git = "https://github.com/danylaporte/mssql_client.git" }
once_cell = "1.2"
parking_lot = "0.9"
rayon = "1.2"
serde = "1.0"
tokio = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
version_tag = { git = "https://github.com/danylaporte/version_tag.git" }

[dev-dependencies]
flock_derive = { path = "../flock_derive" }
