[package]
name = "flock_derive"
edition = "2018"
version = "0.2.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11"
either = "1.5"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0"
syn = { version = "1.0" , features = ["full"] }
toml = "0.5"

[dev-dependencies]
flock = { path = "../flock" }
uuid = { version = "0.8" , features = ["v4"] }
