[package]
name = "flock_derive"
edition = "2018"
version = "0.11.4-alpha.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
publish = false

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11"
either = "1.6"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0"
syn = "1.0"
toml = "0.5"

[dev-dependencies]
